# simple-server

./: Cargo.toml  readme.md
src/: lib.rs  ver_hyper.rs  ver_tcplistener.rs
web_files/: 404.html  home.html  uwu.html
