[package]
name = "simple-server"
version = "0.1.0"
authors = ["nemui_sen <40149702+NemuiSen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ver_hyper"
path = "src/ver_hyper.rs"

[[bin]]
name = "ver_tcplistener"
path = "src/ver_tcplistener.rs"

[dependencies]
hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1", features = ["full"] }